--- a/AlteracaoPedidosApp/package.json
+++ b/AlteracaoPedidosApp/package.json
@@ -24,7 +24,7 @@
     "@uirouter/angularjs": "1.0.11",
     "angular-ui-select": "0.12.100",
     "angular-web-notification": "1.2.26",
-    "bootstrap": "3.3.7",
+    "bootstrap": "^3.3.7",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "jquery-slimscroll": "1.3.8",
